--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>var module = {}</script>
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.a1b2b6d0.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.249c6195.js">
-    <link rel="stylesheet" href="/assets/index.7e88fc6c.css">
+    <script type="module" crossorigin src="./assets/index.a1b2b6d0.js"></script>
+    <link rel="modulepreload" href="./assets/vendor.249c6195.js">
+    <link rel="stylesheet" href="./assets/index.7e88fc6c.css">
   </head>
   <body>
     <div id="root"></div>
