--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.17e50649.svg" />
-
+    <link rel="canonical" href="https://madhusona.github.io/checkt/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script>var module = {}</script>
     <title>Vite App</title>
@@ -13,6 +13,13 @@
   </head>
   <body>
     <div id="root"></div>
-    
+    <script>
+ 
+  if (navigator.serviceWorker) {
+    navigator.serviceWorker.register('/checkt/firebase-messaging-sw.js', {scope: '/checkt/'})
+  }
+  
+  // --- Application code here ---
+  </script>
   </body>
 </html>
