--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
  
   if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('/checkt/firebase-messaging-sw.js', {scope: '/checkt/'})
+    navigator.serviceWorker.register('/checkt/firebase-messaging-sw.js')
   }
   
   // --- Application code here ---
