--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script>
  
   if (navigator.serviceWorker) {
-    navigator.serviceWorker.register('firebase-messaging-sw.js',{scope: 'firebase-cloud-messaging-push-scope'})
+    navigator.serviceWorker.register('/checkt/firebase-messaging-sw.js',{scope: '/checkt/'})
   }
   
   // --- Application code here ---
